--- a/index.css
+++ b/index.css
@@ -56,10 +56,37 @@ body{
   padding: 16px;
   background-color: white;
   margin-bottom: 16px;
+  position: relative;
 }
 
 .tv-show:hover {
   background-color: #ecf0f1;
+}
+
+.tv-show.liked{
+  background-color: #E08283;
+}
+
+.tv-show.liked:hover{
+  background-color: #F1A9A0;
+}
+
+
+
+.tv-show button.like{
+  background: transparent;
+  border: 0;
+  outline: 0;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size:: 22px;
+  cursor:pointer;
+  transition: all 1s ease;
+}
+
+.tv-show.liked button.like {
+  font-size: 40px;
 }
 
 .tv-show .img-container {
